--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "animate.css": "^4.1.1",
+    "jquery": "^3.6.1",
     "ngx-owl-carousel-o": "^14.0.1",
     "ngx-pagination": "^6.0.2",
     "ngx-toastr": "^15.0.0",
